# ubank-platform

./: .gitignore  LICENSE  README.md
backend/monitoring-service/: .env.example  Cargo.toml
backend/monitoring-service/examples/: sample_event.json
backend/monitoring-service/migrations/: 0001_init.sql  0002_add_idempotency_key_and_event_types.sql  0003_add_web_sockets_event.sql
backend/monitoring-service/src/: lib.rs  main.rs
backend/monitoring-service/src/application/: mod.rs
backend/monitoring-service/src/application/ports/: events_repository.rs  mod.rs
backend/monitoring-service/src/application/queries/: get_event_list_query.rs  get_idempotency_query.rs  get_metrics_by_operation_query.rs  get_metrics_by_service_query.rs  get_metrics_timeseries_query.rs  get_overview_metrics_query.rs  get_trace_list_query.rs  get_trace_query.rs  mod.rs
backend/monitoring-service/src/application/services/: ingest_event_service.rs
backend/monitoring-service/src/bootstrap/: startup.rs
backend/monitoring-service/src/config/: mod.rs
backend/monitoring-service/src/domain/: mod.rs  monitoring_event.rs
backend/monitoring-service/src/infrastructure/messaging/: rabbitmq_consumer.rs
backend/monitoring-service/src/shared/: error.rs
backend/settings-service/: Cargo.toml
backend/settings-service/migrations/: 0001_create_user_settings.sql  0002_create_hidden_accounts.sql  0003_create_idempotency_records.sql
backend/settings-service/src/: main.rs
backend/settings-service/src/application/: error.rs  mod.rs
backend/settings-service/src/bootstrap/: config.rs
(+43 files in other folders)
