[package]
name = "monitoring-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.51.1", features = ["full"] }
axum = "0.8.9"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "time"] }

lapin = "4.4.0"
futures-lite = "2.6.1"

time = { version = "0.3.7", features = ["serde", "parsing", "formatting"] }
thiserror = "2.0.18"
dotenvy = "0.15.7"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1.89"

