[package]
name = "settings-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.51.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }
thiserror = "2.0.18"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
dotenvy = "0.15.7"
async-trait = "0.1.89"
http = "1.4.0"